Fix a bug that the title and subtitle on video overlap each other

--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -289,9 +289,12 @@ $hub-header-color: #627edb;
         position: absolute;
         bottom: 15px;
         left: 10px;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 
         strong {
-            font-size: 25px;
+            font-size: 20px;
             word-break: keep-all;
             color: white;
         }
